update order of projects

--- a/personal_projects.html
+++ b/personal_projects.html
@@ -25,29 +25,6 @@
 <main>
 
     <h1>Personal Projects</h1>
-    <!--    <p>This page is meant to give a short descriptions of many of the projects that I have been a part of. </p>-->
-
-    <!--    <p>There are four machine learning projects that are listed. These projects are set up in an experiment style where-->
-    <!--    a question was prompted and then an experiment was completed to test our hypotheses. A full report is available-->
-    <!--    each project, but it is not linked. This report will contain a detailed explanation of the problem, the methods-->
-    <!--    that were used in the experiment, and a detailed analysis of the results</p>-->
-
-    <!--    <p>The next project is a small web application that is meant to help a user track what trails they have ridden in-->
-    <!--    the Bozeman area. This application lets users add trails which the trails will then be plotted on a 3d map as well-->
-    <!--    as being displayed on the home page. </p>-->
-
-    <!--    <p>The next project is a machine learning model that will classify the ASL (American Sign Language) alphabet and-->
-    <!--        allow users to sign out words onto the screen. For this project, there is code that will allow the user to create-->
-    <!--        their own dataset if they choose.</p>-->
-
-    <!--    <p>The final project is a small unity game that allows the user to rol a ball around a surface while trying to-->
-    <!--        collect  pick-ups. There is an antagonist that will chase the user while they are trying to pick up the-->
-    <!--        collectibles.</p>-->
-
-    <!--    <p>All the source code for these projects can be found on my <a href="https://github.com/joshaney324">GitHub</a>.-->
-    <!--        This excludes the machine learning projects. If you want to see the code for these, please contact me by email.-->
-    <!--        There are also design documents and full reports for all the machine learning projects. If you would like to see-->
-    <!--        those please contact me as well.</p>-->
     <br>
 
     <div class="row row-cols-1 row-cols-md-2 g-4">
@@ -55,17 +32,18 @@
         <div class="col">
             <div class="card h-100">
                 <div class="card-body">
-                    <h5 class="card-title">Naive Bayes Model From Scratch</h5>
+                    <h5 class="card-title">Bike Trails Web Application</h5>
                     <ul>
-                        <li>Python, UML, Numpy</li>
-                        <li>Probability Theory</li>
-                        <li>Data Preprocessing: Data Imputation, Binning</li>
-                        <li>Technical Writing</li>
+                        <li>C#, HTML, CSS, SQL</li>
+                        <li>ASP.NET Core</li>
+                        <li>Entity Framework Core</li>
+                        <li>Mapbox, GPX Parsing</li>
                     </ul>
                 </div>
                 <div class="card-footer d-flex justify-content-between">
-                    <a href="ml_1.html" class="btn btn-outline-primary" target="_self">View Project</a>
-<!--                    <a href="https://github.com/joshaney324" class="btn btn-outline-secondary" target="_blank">GitHub</a>-->
+                    <a href="bike_webapp.html" class="btn btn-outline-primary" target="_self">View Project</a>
+                    <a href="https://github.com/joshaney324/bike_trail_webapp.git" class="btn btn-outline-secondary"
+                       target="_blank">GitHub</a>
                 </div>
             </div>
         </div>
@@ -73,18 +51,19 @@
         <div class="col">
             <div class="card h-100">
                 <div class="card-body">
-                    <h5 class="card-title">K-Nearest-Neighbors Methods From Scratch</h5>
+                    <h5 class="card-title">Hand Tracking / ASL Alphabet Detection</h5>
                     <ul>
-                        <li>Python, UML, Numpy</li>
-                        <li>Data Imputation, One-Hot Encoding, Normalization</li>
-                        <li>KNN Classification and Regression</li>
-                        <li>K-Means Clustering</li>
-                        <li>Technical Writing</li>
+                        <li>Python</li>
+                        <li>Dataset Creation</li>
+                        <li>Data Preprocessing</li>
+                        <li>Tensorflow</li>
+                        <li>MediaPipe</li>
                     </ul>
                 </div>
                 <div class="card-footer d-flex justify-content-between">
-                    <a href="ml_2.html" class="btn btn-outline-primary" target="_self">View Project</a>
-<!--                    <a href="https://github.com/joshaney324" class="btn btn-outline-secondary" target="_blank">GitHub</a>-->
+                    <a href="asl.html" class="btn btn-outline-primary" target="_self">View Project</a>
+                    <a href="https://github.com/joshaney324/HandTracking" class="btn btn-outline-secondary"
+                       target="_blank">GitHub</a>
                 </div>
             </div>
         </div>
@@ -102,7 +81,7 @@
                 </div>
                 <div class="card-footer d-flex justify-content-between">
                     <a href="ml_3.html" class="btn btn-outline-primary" target="_self">View Project</a>
-<!--                    <a href="https://github.com/joshaney324" class="btn btn-outline-secondary" target="_blank">GitHub</a>-->
+                    <!--                    <a href="https://github.com/joshaney324" class="btn btn-outline-secondary" target="_blank">GitHub</a>-->
                 </div>
             </div>
         </div>
@@ -122,7 +101,7 @@
                 </div>
                 <div class="card-footer d-flex justify-content-between">
                     <a href="ml_4.html" class="btn btn-outline-primary" target="_self">View Project</a>
-<!--                    <a href="https://github.com/joshaney324" class="btn btn-outline-secondary" target="_blank">GitHub</a>-->
+                    <!--                    <a href="https://github.com/joshaney324" class="btn btn-outline-secondary" target="_blank">GitHub</a>-->
                 </div>
             </div>
         </div>
@@ -130,17 +109,17 @@
         <div class="col">
             <div class="card h-100">
                 <div class="card-body">
-                    <h5 class="card-title">Bike Trails Web Application</h5>
+                    <h5 class="card-title">Naive Bayes Model From Scratch</h5>
                     <ul>
-                        <li>C#, HTML, CSS, SQL</li>
-                        <li>ASP.NET Core</li>
-                        <li>Entity Framework Core</li>
-                        <li>Mapbox, GPX Parsing</li>
+                        <li>Python, UML, Numpy</li>
+                        <li>Probability Theory</li>
+                        <li>Data Preprocessing: Data Imputation, Binning</li>
+                        <li>Technical Writing</li>
                     </ul>
                 </div>
                 <div class="card-footer d-flex justify-content-between">
-                    <a href="bike_webapp.html" class="btn btn-outline-primary" target="_self">View Project</a>
-                    <a href="https://github.com/joshaney324/bike_trail_webapp.git" class="btn btn-outline-secondary" target="_blank">GitHub</a>
+                    <a href="ml_1.html" class="btn btn-outline-primary" target="_self">View Project</a>
+                    <!--                    <a href="https://github.com/joshaney324" class="btn btn-outline-secondary" target="_blank">GitHub</a>-->
                 </div>
             </div>
         </div>
@@ -148,25 +127,25 @@
         <div class="col">
             <div class="card h-100">
                 <div class="card-body">
-                    <h5 class="card-title">Hand Tracking / ASL Alphabet Detection</h5>
+                    <h5 class="card-title">K-Nearest-Neighbors Methods From Scratch</h5>
                     <ul>
-                        <li>Python</li>
-                        <li>Dataset Creation</li>
-                        <li>Data Preprocessing</li>
-                        <li>Tensorflow</li>
-                        <li>MediaPipe</li>
+                        <li>Python, UML, Numpy</li>
+                        <li>Data Imputation, One-Hot Encoding, Normalization</li>
+                        <li>KNN Classification and Regression</li>
+                        <li>K-Means Clustering</li>
+                        <li>Technical Writing</li>
                     </ul>
                 </div>
                 <div class="card-footer d-flex justify-content-between">
-                    <a href="asl.html" class="btn btn-outline-primary" target="_self">View Project</a>
-                    <a href="https://github.com/joshaney324/HandTracking" class="btn btn-outline-secondary" target="_blank">GitHub</a>
+                    <a href="ml_2.html" class="btn btn-outline-primary" target="_self">View Project</a>
+                    <!--                    <a href="https://github.com/joshaney324" class="btn btn-outline-secondary" target="_blank">GitHub</a>-->
                 </div>
             </div>
         </div>
+
 
         <!-- Repeat similarly for ml_3, ml_4, bike-webapp, asl, unity if needed -->
     </div>
-
 
 
     <!--    <div id="unity" class="container">-->
