collapsed bike page

--- a/bike_webapp.html
+++ b/bike_webapp.html
@@ -25,7 +25,7 @@
 
 <main>
 
-    <div id="bike-webapp" class="container collapse">
+    <div id="bike-webapp" class="container">
         <section class="project">
             <h2>Web Project</h2>
             <p><strong>Description</strong>: I created a basic web application that allows users to log different
