--- a/asl.html
+++ b/asl.html
@@ -61,6 +61,12 @@
             <p><strong>Future Additions</strong>: I would eventually like to have the model recognize gestures. This
                 would either require me to add another model such as a LSTM (Long Short-Term Memory) Recurrent Neural
                 Network or a 3D Convolutional Neural Network.</p>
+
+            <div class="text-center mt-5 mb-4">
+                <a href="personal_projects.html" class="btn btn-primary">
+                    ← Back to Personal Projects
+                </a>
+            </div>
         </section>
     </div>
 
