--- a/bike_webapp.html
+++ b/bike_webapp.html
@@ -68,6 +68,11 @@
             <p><strong>Future Additions</strong>: I would also like to add more features to the map so that it can
                 highlight trails based off of the user's
                 searches.</p>
+            <div class="text-center mt-5 mb-4">
+                <a href="personal_projects.html" class="btn btn-primary">
+                    ← Back to Personal Projects
+                </a>
+            </div>
         </section>
     </div>
 
