--- a/personal_projects.html
+++ b/personal_projects.html
@@ -26,7 +26,7 @@
 
 <main>
 
-    <h1>Personal Projects</h1>
+    <h1>Personal Projects and Academic Projects</h1>
     <br>
 
     <div class="row row-cols-1 row-cols-md-2 g-4">
