add reinforcement learning project

--- a/personal_projects.html
+++ b/personal_projects.html
@@ -145,8 +145,28 @@
             </div>
         </div>
 
+        div class="col">
+        <div class="card h-100">
+            <div class="card-body">
+                <h5 class="card-title">Reinforcement Learning From Scratch on Grid racetrack Problem</h5>
+                <ul>
+                    <li>Python, Numpy</li>
+                    <li>Technical Writing</li>
+                    <li>Linear Algebra</li>
+                    <li>Q-Learning, SARSA, Value Iteration</li>
+                </ul>
+            </div>
+            <div class="card-footer d-flex justify-content-between">
+                <a href="ai_rl.html" class="btn btn-outline-primary" target="_self">View Project</a>
+<!--                <a href="https://github.com/joshaney324/bike_trail_webapp.git" class="btn btn-outline-secondary"-->
+<!--                   target="_blank">GitHub</a>-->
+            </div>
+        </div>
+    </div>
 
-        <!-- Repeat similarly for ml_3, ml_4, bike-webapp, asl, unity if needed -->
+
+
+    <!-- Repeat similarly for ml_3, ml_4, bike-webapp, asl, unity if needed -->
     </div>
 
 
