add reinforcement learning project

--- a/personal_projects.html
+++ b/personal_projects.html
@@ -145,7 +145,7 @@
             </div>
         </div>
 
-        div class="col">
+<!--        div class="col">-->
         <div class="card h-100">
             <div class="card-body">
                 <h5 class="card-title">Reinforcement Learning From Scratch on Grid racetrack Problem</h5>
