--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Josh Aney</title>
+    <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -39,15 +40,54 @@
                 <section class="profile">
                     <img src="images/profile_image.jpg" alt="Profile Picture">
                     <h1>Josh Aney</h1>
+<!--                    <p class="hero-tagline">Computer Science Enthusiast</p>-->
                     <div class="text-start mx-auto" style="max-width: 280px;">
                         <p><strong>Education:</strong> Montana State University</p>
                         <p><strong>Major:</strong> Computer Science</p>
                         <p><strong>Email: </strong><a href="mailto:josh.aney@icloud.com">josh.aney@icloud.com</a></p>
                         <p><strong>Phone: </strong><a href="tel:+5075130517">(507)-513-0517</a></p>
                     </div>
-                    <div class="social-icons mt-2">
-                        <a href="https://github.com/joshaney324" target="_blank"><i class="fab fa-github"></i></a>
-                        <a href="https://www.linkedin.com/in/josh-aney-67801528b" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <div class="social-icons">
+                        <a href="https://github.com/joshaney324" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/josh-aney-67801528b" target="_blank" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+
+                    <div class="skills-section">
+                        <h3>Skills & Technologies</h3>
+                        <div class="skill-category">
+                            <div class="skill-category-title">Languages</div>
+                            <div class="skill-badges">
+                                <span class="skill-badge">Python</span>
+                                <span class="skill-badge">C#</span>
+                                <span class="skill-badge">Java</span>
+                                <span class="skill-badge">C</span>
+                                <span class="skill-badge">SQL</span>
+                                <span class="skill-badge">MATLAB</span>
+                                <span class="skill-badge">HTML/CSS</span>
+                                <span class="skill-badge">JavaScript</span>
+                            </div>
+                        </div>
+                        <div class="skill-category">
+                            <div class="skill-category-title">Frameworks & Libraries</div>
+                            <div class="skill-badges">
+                                <span class="skill-badge">NumPy</span>
+                                <span class="skill-badge">TensorFlow</span>
+                                <span class="skill-badge">MediaPipe</span>
+                                <span class="skill-badge">OpenCV</span>
+                                <span class="skill-badge">.NET Core</span>
+                                <span class="skill-badge">Entity Framework</span>
+                            </div>
+                        </div>
+                        <div class="skill-category">
+                            <div class="skill-category-title">Tools & Platforms</div>
+                            <div class="skill-badges">
+                                <span class="skill-badge">Git</span>
+                                <span class="skill-badge">GitHub</span>
+                                <span class="skill-badge">Linux</span>
+                                <span class="skill-badge">Mapbox</span>
+                                <span class="skill-badge">SQL Server</span>
+                            </div>
+                        </div>
                     </div>
                 </section>
             </div>
@@ -93,11 +133,12 @@
 <footer class="footer">
     <div class="container">
         <div class="footer-bottom">
-            <p>&copy; 2024 Josh Aney | <a href="mailto:josh.aney@icloud.com">josh.aney@icloud.com</a> | <a href="tel:+5075130517">(507)-513-0517</a> | GitHub: <a href="https://github.com/joshaney324">joshaney324</a></p>
+            <p>&copy; <span id="current-year"></span> Josh Aney | <a href="mailto:josh.aney@icloud.com">josh.aney@icloud.com</a> | <a href="tel:+5075130517">(507)-513-0517</a> | GitHub: <a href="https://github.com/joshaney324">joshaney324</a></p>
         </div>
     </div>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script>document.getElementById('current-year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
