--- a/ml_1.html
+++ b/ml_1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Naive Bayes - Josh Aney</title>
+    <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -93,7 +94,7 @@
 <footer class="footer">
     <div class="container">
         <div class="footer-bottom">
-            <p>&copy; 2024 Josh Aney | <a href="mailto:josh.aney@icloud.com">josh.aney@icloud.com</a> | <a
+            <p>&copy; <span id="current-year"></span> Josh Aney | <a href="mailto:josh.aney@icloud.com">josh.aney@icloud.com</a> | <a
                     href="tel:+5075130517">(507)-513-0517</a> | GitHub: <a
                     href="https://github.com/joshaney324">joshaney324</a></p>
         </div>
@@ -101,5 +102,6 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script>document.getElementById('current-year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
