--- a/personal_projects.html
+++ b/personal_projects.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Projects - Josh Aney</title>
+    <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
 
@@ -171,7 +173,7 @@
 <footer class="footer">
     <div class="container">
         <div class="footer-bottom">
-            <p>&copy; 2024 Josh Aney | <a href="mailto:josh.aney@icloud.com">josh.aney@icloud.com</a> | <a
+            <p>&copy; <span id="current-year"></span> Josh Aney | <a href="mailto:josh.aney@icloud.com">josh.aney@icloud.com</a> | <a
                     href="tel:+5075130517">(507)-513-0517</a> | GitHub: <a
                     href="https://github.com/joshaney324">joshaney324</a></p>
         </div>
@@ -179,5 +181,6 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script>document.getElementById('current-year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
