Other skills section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
                                 <span class="skill-badge">SQL</span>
                                 <span class="skill-badge">MATLAB</span>
                                 <span class="skill-badge">HTML/CSS</span>
-                                <span class="skill-badge">JavaScript</span>
                             </div>
                         </div>
                         <div class="skill-category">
@@ -76,6 +75,7 @@
                                 <span class="skill-badge">OpenCV</span>
                                 <span class="skill-badge">.NET Core</span>
                                 <span class="skill-badge">Entity Framework</span>
+                                <span class="skill-badge">PyTorch</span>
                             </div>
                         </div>
                         <div class="skill-category">
@@ -86,6 +86,16 @@
                                 <span class="skill-badge">Linux</span>
                                 <span class="skill-badge">Mapbox</span>
                                 <span class="skill-badge">SQL Server</span>
+                            </div>
+                        </div>
+                        <div class="skill-category">
+                            <div class="skill-category-title">Other Skills</div>
+                            <div class="skill-badges">
+                                <span class="skill-badge">Linear Algebra</span>
+                                <span class="skill-badge">UML</span>
+                                <span class="skill-badge">Technical Writing</span>
+                                <span class="skill-badge">Object-Oriented Programming</span>
+                                <span class="skill-badge">Adobe Illustrator</span>
                             </div>
                         </div>
                     </div>
