Other skills section

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                                 <span class="skill-badge">Technical Writing</span>
                                 <span class="skill-badge">Object-Oriented Programming</span>
                                 <span class="skill-badge">Adobe Illustrator</span>
+                                <span class="skill-badge">Overleaf/Latex</span>
                             </div>
                         </div>
                     </div>
