--- a/personal_projects.html
+++ b/personal_projects.html
@@ -166,6 +166,28 @@
                 </div>
             </div>
 
+            <div class="col">
+                <div class="card h-100 text-center">
+                    <div class="card-body">
+                        <h5 class="card-title">Recent Activity</h5>
+                        <br>
+
+                        <img
+                                src="https://ghchart.rshah.org/joshaney324"
+                                alt="GitHub Contributions"
+                                class="img-fluid mb-3"
+                        >
+
+                    </div>
+
+                    <div class="card-footer">
+                        <a href="https://github.com/joshaney324" target="_blank" class="btn btn-outline-secondary">
+                            View GitHub Profile
+                        </a>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </main>
 </div>
