About me updates

--- a/index.html
+++ b/index.html
@@ -106,20 +106,20 @@
             <div class="col-lg-8">
                 <section class="bio">
                     <h2>About Me</h2>
-                    <p>My name is Josh Aney, and I am currently a computer science student at Montana State University.
-                        I am in my third year and I plan on graduating in the spring of 2026. Ever since I have been young, I
-                        have always been fascinated with how computers, video games, or any other sort of software worked. I
-                        could tell from a young age that I would be interested in pushing the limits of technology and applying
-                        it into my own day-to-day life to solve problems</p>
-                    <p>When I am not completing school work or working on other projects, I enjoy spending time outdoors. I love
-                        getting out into the mountains to ski or bike. I live for any sort of adventures that will get me outside</p>
+                    <p>My name is Josh Aney, and I am a computer science student at Montana State University, currently in my fourth
+                        year with plans to graduate in spring 2026. From a young age, I have been fascinated by how computers,
+                        video games, and other software systems work. That curiosity naturally grew into a passion for pushing the limits
+                        of technology and applying it to real-world problems in my everyday life.</p>
+                    <p>Outside of school and project work, I enjoy spending time outdoors. I love
+                        getting out into the mountains to ski or bike. I live for any sort of adventure that will get me outside.
+                        Throughout my experience at Montana State, I have enjoyed getting out skiing at Bridger Bowl, biking in
+                        Hyalite Canyon, and spending time with my friends playing music with the marching band.</p>
                     <h2>Academic Interests</h2>
-                    <p>In school, I have grown to be very interested in the world of machine learning. I enjoy working with a
-                        group of my peers to solve a problem that is given to us. Working in a group gives me a chance to bounce ideas
-                        off of other people to allow me to find new ways to manipulate a dataset or approach a certain challenge.
-                        I also love getting to work with the math involved in many of these problems. I had the opportunity to
-                        code a few common machine learning algorithms from scratch, and it truly gave me a new perspective of
-                        why math is so important in my everyday life.</p>
+                    <p>Throughout my academic career, I have developed a strong interest in machine learning. I enjoy collaborating
+                        with peers to solve challenging problems, as working in a group allows me to exchange ideas and discover
+                        new ways to approach and manipulate data. I am particularly drawn to the mathematical foundations behind
+                        these models. Having the opportunity to implement several machine learning algorithms from scratch gave me
+                        a deeper appreciation for how essential mathematics is in both problem-solving and real-world applications.</p>
                     <h2>Professional Experience</h2>
                     <p>I am currently working with the CaMP (Cybernetics and Motor Physiology) lab
                         at Mayo Clinic. I worked with Dr. Kai Miller on a research project that involved me analyzing voltage
@@ -128,13 +128,15 @@
                         often had to work with small datasets that would have missing values or noisy data. This caused me to be
                         very conscious on how I trained the models and how I chose which models to use.</p>
                     <h2>Extracurricular Activities</h2>
-                    <p>For the past two years, I have been able to be a part of the Spirit of the West Drumline. I started
+                    <p>For the past three years, I have been able to be a part of the Spirit of the West Drumline. I started
                         playing musical instruments at a young age, and I have been hooked ever since. I now have the privilege
                         of playing snare drum at all of Montana State University's home football games which has been one of the
-                        best experiences of my entire life.</p>
+                        best experiences of my entire life. This past year, I had the opportunity to be the snare drum section leader
+                        which taught me many lessons on how to be a leader and work with a large group of people.</p>
                     <p>I am also Co-President of the Montana State Club Tennis Team. Sports have always been a large part of my
-                        life since a young age, and I am so happy that I am able to give students an opportunity to continue playing
-                        or pick up tennis at a low cost when they come to college.</p>
+                        life since a young age. I am so happy that I am able to give students an opportunity to continue playing
+                        or pick up tennis at a low cost when they come to college as well as giving students a place to compete
+                        in a sport they love.</p>
                 </section>
             </div>
         </div>
