--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                                 <span class="skill-badge">C</span>
                                 <span class="skill-badge">SQL</span>
                                 <span class="skill-badge">MATLAB</span>
-                                <span class="skill-badge">HTML/CSS</span>
+<!--                                <span class="skill-badge">Latex</span>-->
+<!--                                <span class="skill-badge">HTML/CSS</span>-->
                             </div>
                         </div>
                         <div class="skill-category">
@@ -74,8 +75,9 @@
                                 <span class="skill-badge">MediaPipe</span>
                                 <span class="skill-badge">OpenCV</span>
                                 <span class="skill-badge">.NET Core</span>
-                                <span class="skill-badge">Entity Framework</span>
+                                <span class="skill-badge">MatPlotLib</span>
                                 <span class="skill-badge">PyTorch</span>
+                                <span class="skill-badge">Razor Pages</span>
                             </div>
                         </div>
                         <div class="skill-category">
@@ -96,7 +98,9 @@
                                 <span class="skill-badge">Technical Writing</span>
                                 <span class="skill-badge">Object-Oriented Programming</span>
                                 <span class="skill-badge">Adobe Illustrator</span>
-                                <span class="skill-badge">Overleaf/Latex</span>
+                                <span class="skill-badge">Overleaf</span>
+                                <span class="skill-badge">Signal Processing</span>
+                                <span class="skill-badge">Coaching/Tutoring</span>
                             </div>
                         </div>
                     </div>
