--- a/personal_projects.html
+++ b/personal_projects.html
@@ -169,7 +169,7 @@
             <div class="col">
                 <div class="card h-100 text-center">
                     <div class="card-body">
-                        <h5 class="card-title">Recent Activity</h5>
+                        <h5 class="card-title">Recent Project Activity</h5>
                         <br>
 
                         <img
