Update tools and platforms

--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
                                 <span class="skill-badge">Linux</span>
                                 <span class="skill-badge">Mapbox</span>
                                 <span class="skill-badge">SQL Server</span>
+                                <span class="skill-badge">VSCode</span>
+                                <span class="skill-badge">Jetbrains Products</span>
                             </div>
                         </div>
                         <div class="skill-category">
