Add short paragraph about tennis coaching and update skills

--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
                 <section class="profile">
                     <img src="images/profile_image.jpg" alt="Profile Picture">
                     <h1>Josh Aney</h1>
-<!--                    <p class="hero-tagline">Computer Science Enthusiast</p>-->
                     <div class="text-start mx-auto" style="max-width: 280px;">
                         <p><strong>Education:</strong> Montana State University</p>
                         <p><strong>Major:</strong> Computer Science</p>
@@ -63,8 +62,7 @@
                                 <span class="skill-badge">C</span>
                                 <span class="skill-badge">SQL</span>
                                 <span class="skill-badge">MATLAB</span>
-<!--                                <span class="skill-badge">Latex</span>-->
-<!--                                <span class="skill-badge">HTML/CSS</span>-->
+                                <span class="skill-badge">HTML/CSS</span>
                             </div>
                         </div>
                         <div class="skill-category">
@@ -133,7 +131,7 @@
                         how to handle real world challenges that could be faced when working in the machine learning field. I
                         often had to work with small datasets that would have missing values or noisy data. This caused me to be
                         very conscious on how I trained the models and how I chose which models to use.</p>
-                    <h2>Extracurricular Activities</h2>
+                    <h2>Extracurricular Activities and Other Experience</h2>
                     <p>For the past three years, I have been able to be a part of the Spirit of the West Drumline. I started
                         playing musical instruments at a young age, and I have been hooked ever since. I now have the privilege
                         of playing snare drum at all of Montana State University's home football games which has been one of the
@@ -143,6 +141,9 @@
                         life since a young age. I am so happy that I am able to give students an opportunity to continue playing
                         or pick up tennis at a low cost when they come to college as well as giving students a place to compete
                         in a sport they love.</p>
+                    <p>Finally, I have spent the past couple summers coaching tennis on the side as well as doing some coaching
+                        during the school year when I have time. I coached children between the ages of 6–16 with class sizes
+                        between 5–15 individuals.</p>
                 </section>
             </div>
         </div>
