--- a/index.html
+++ b/index.html
@@ -52,15 +52,13 @@
                     </div>
 
                     <div class="skills-section">
-                        <h3>Skills & Technologies</h3>
+                        <h3>Skills, Technologies, and Interests</h3>
                         <div class="skill-category">
                             <div class="skill-category-title">Languages</div>
                             <div class="skill-badges">
                                 <span class="skill-badge">Python</span>
                                 <span class="skill-badge">C#</span>
                                 <span class="skill-badge">Java</span>
-                                <span class="skill-badge">C</span>
-                                <span class="skill-badge">SQL</span>
                                 <span class="skill-badge">MATLAB</span>
                                 <span class="skill-badge">HTML/CSS</span>
                             </div>
@@ -101,6 +99,20 @@
                                 <span class="skill-badge">Overleaf</span>
                                 <span class="skill-badge">Signal Processing</span>
                                 <span class="skill-badge">Coaching/Tutoring</span>
+                            </div>
+                        </div>
+                        <div class="skill-category">
+                            <div class="skill-category-title">Interests</div>
+                            <div class="skill-badges">
+                                <span class="skill-badge">Machine Learning</span>
+                                <span class="skill-badge">Artificial Intelligence</span>
+                                <span class="skill-badge">Optimization Algorithms</span>
+                                <span class="skill-badge">Computational Neuroscience</span>
+                                <span class="skill-badge">Swarm-Based Intelligence Algorithms</span>
+                                <span class="skill-badge">Skiing</span>
+                                <span class="skill-badge">Mountain Biking</span>
+                                <span class="skill-badge">Tennis</span>
+                                <span class="skill-badge">Music</span>
                             </div>
                         </div>
                     </div>
