--- a/index.html
+++ b/index.html
@@ -156,6 +156,16 @@
                     <p>Finally, I have spent the past couple summers coaching tennis on the side as well as doing some coaching
                         during the school year when I have time. I coached children between the ages of 6–16 with class sizes
                         between 5–15 individuals.</p>
+                    <h2>Get In Touch</h2>
+                    <p>I'm always open to discussing new opportunities, projects, or just connecting. Feel free to reach out!</p>
+                    <div class="contact-buttons">
+                        <a href="mailto:josh.aney@icloud.com" class="btn btn-outline-primary">
+                            <i class="fas fa-envelope"></i> Email Me
+                        </a>
+                        <a href="https://www.linkedin.com/in/josh-aney-67801528b" target="_blank" class="btn btn-outline-secondary">
+                            <i class="fab fa-linkedin-in"></i> LinkedIn
+                        </a>
+                    </div>
                 </section>
             </div>
         </div>
