small error on personal project description

--- a/personal_projects.html
+++ b/personal_projects.html
@@ -156,7 +156,7 @@
                         <ul>
                             <li>Python, Numpy</li>
                             <li>Technical Writing</li>
-                            <li>Linear Algebra</li>
+                            <li>Model-Based and Model-Free algorithms</li>
                             <li>Q-Learning, SARSA, Value Iteration</li>
                         </ul>
                     </div>
