add experience page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                     <a class="nav-link active" href="index.html">About Me</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="experience.html">Experience</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="personal_projects.html">Personal Projects</a>
                 </li>
                 <li class="nav-item">
@@ -137,12 +140,9 @@
                         these models. Having the opportunity to implement several machine learning algorithms from scratch gave me
                         a deeper appreciation for how essential mathematics is in both problem-solving and real-world applications.</p>
                     <h2>Professional Experience</h2>
-                    <p>I am currently working with the CaMP (Cybernetics and Motor Physiology) lab
-                        at Mayo Clinic. I worked with Dr. Kai Miller on a research project that involved me analyzing voltage
-                        traces from the brain with different machine learning techniques. This experience taught me a lot about
-                        how to handle real world challenges that could be faced when working in the machine learning field. I
-                        often had to work with small datasets that would have missing values or noisy data. This caused me to be
-                        very conscious on how I trained the models and how I chose which models to use.</p>
+                    <p>I have research experience at both Montana State University and Mayo Clinic, where I have worked on
+                        machine learning projects involving brain signal analysis and other applications.
+                        <a href="experience.html">View my full experience</a>.</p>
                     <h2>Extracurricular Activities and Other Experience</h2>
                     <p>For the past three years, I have been able to be a part of the Spirit of the West Drumline. I started
                         playing musical instruments at a young age, and I have been hooked ever since. I now have the privilege
