--- a/ai_rl.html
+++ b/ai_rl.html
@@ -24,6 +24,9 @@
                     <a class="nav-link" href="index.html">About Me</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="experience.html">Experience</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="personal_projects.html">Personal Projects</a>
                 </li>
                 <li class="nav-item">
