--- a/personal_projects.html
+++ b/personal_projects.html
@@ -23,6 +23,9 @@
                     <a class="nav-link" href="index.html">About Me</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="experience.html">Experience</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link active" href="personal_projects.html">Personal Projects</a>
                 </li>
                 <li class="nav-item">
