CSCI 491, and CaMP lab

--- a/experience.html
+++ b/experience.html
@@ -43,23 +43,75 @@
 
             <h2>Professional Experience</h2>
 
-            <h3>Research Assistant - Montana State University</h3>
+            <h3>Research Assistant - Montana State University (HACR Lab)</h3>
             <p><em>Current Position</em></p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 
-            <h3>Research Assistant - Mayo Clinic</h3>
-            <p><em>CaMP (Cybernetics and Motor Physiology) Lab</em></p>
-            <p>I worked with Dr. Kai Miller on a research project that involved analyzing voltage
-                traces from the brain with different machine learning techniques. This experience taught me a lot about
-                how to handle real world challenges that could be faced when working in the machine learning field. I
-                often had to work with small datasets that would have missing values or noisy data. This caused me to be
-                very conscious on how I trained the models and how I chose which models to use.</p>
+            <h3>Undergraduate Research Intern - Mayo Clinic (CaMP Lab)</h3>
+            <p><em>Cybernetics and Motor Physiology Lab, Department of Neurosurgery</em></p>
+            <p>Worked with Dr. Kai Miller analyzing stereo-electroencephalography (sEEG) signals recorded
+                from intracranial electrodes during a modified auditory oddball task. I applied and modified
+                Canonical Response Parameterization (CRP), a data-driven method originally developed for
+                electrical stimulation data, to characterize auditory evoked potentials across cortical
+                sites and task conditions.</p>
+
+            <p>The research demonstrated that CRP can quantify neural response magnitude, duration, and
+                reproducibility without relying on predefined peaks or latency windows. Key findings showed
+                stronger cortical responses to novel tones and modulation of auditory processing by
+                attentional state during a concurrent visual task.</p>
+
+            <p>I am first author on a manuscript currently in review: <em>"Parameterization of intracranial
+                auditory evoked responses reveals cortical novelty and attention effects."</em></p>
+
+            <p><strong>Challenges:</strong> Working with clinical neural data required developing robust
+                approaches to handle noisy signals and data cleaning. The short inter-stimulus intervals
+                required implementing high-pass filtering techniques rather than traditional baseline
+                subtraction to prevent response contamination between trials.</p>
+
+            <p>At the end of each summer, I presented my findings to my PI, principal investigators from
+                related labs, and other undergraduate research interns.</p>
+
+            <p><strong>Skills & Technologies:</strong></p>
+            <ul>
+                <li>MATLAB, Signal Processing</li>
+                <li>Computational Neuroscience Libraries (SPM12, custom sEEG toolboxes)</li>
+                <li>Scientific Figure Design (Adobe Illustrator)</li>
+                <li>Technical Writing (Overleaf/LaTeX)</li>
+                <li>Data Cleaning and Preprocessing</li>
+                <li>Statistical Analysis</li>
+                <li>Research Presentations</li>
+            </ul>
 
             <h2>Academic Experience</h2>
 
             <h3>Independent Study - CSCI 491-7 Hypermedia Systems</h3>
             <p><em>Montana State University</em></p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Worked with a professor to design and develop a semester-long project template for an advanced web design course. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+            <p>Collaborated with a professor and a team of three students to design and develop a semester-long
+                project template for an advanced web development course. The project teaches a hypermedia-first
+                approach to web development, emphasizing server-side rendering with htmx as an alternative to
+                single-page application architectures.</p>
+
+            <p>I was responsible for implementing the core website functionality, including the MVC controller
+                layer, authentication and authorization systems, and multi-step business workflows. The application
+                is a veterinary clinic management system with two user roles (veterinarians and pet owners),
+                featuring appointment scheduling, invoicing, prescription management, and a messaging system.</p>
+
+            <p><strong>Curriculum Design:</strong> A key challenge was balancing project complexity for students.
+                We designed the database schema with 11 interconnected tables including polymorphic relationships
+                (shared Account model for Owner and Vet) and complex features like conversation-based messaging.
+                This provides enough depth to teach real-world patterns like role-based access control, pagination,
+                and transactional integrity without overwhelming students. The progressive assignment structure
+                allows students to implement new controllers by following established patterns in the codebase.</p>
+
+            <p><strong>Skills & Technologies:</strong></p>
+            <ul>
+                <li>Java, SQLite, htmx, HTML/CSS</li>
+                <li>MVC Architecture</li>
+                <li>Database Design</li>
+                <li>Authentication & Authorization</li>
+                <li>Curriculum Design</li>
+                <li>Team Collaboration</li>
+            </ul>
         </section>
     </main>
 </div>
